Fix navbar links color when xs for better contrast

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -7,7 +7,7 @@ gx-navbar {
   --gx-navbar-main-background-color: rgb(87, 89, 101);
   --gx-navbar-sub-background-color: white;
   --gx-navbar-items-background-color: rgb(224, 224, 224);
-  --gx-navbar-items-color: rgb(147, 148, 152);
+  --gx-navbar-items-color: #575965;
   --gx-navbar-main-color: white;
   --gx-navbar-sub-color: black;
   --gx-navbar-main-height: 60px;
